# triage-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py  start-triage.ps1
config/: release_gate.ci.json  release_gate.example.json
correlation/: attack_chain.py  entity_graph.py  incident_builder.py
detectors/: behavioral.py  credential_access.py  defense_evasion.py  fp_filter.py  lateral_movement.py  persistence.py  powershell_script.py
docs/: configuration.md  production-readiness.md  quality-gates.md
intel/: iocs.json
models/: event_model.py
parser/: evtx_reader.py  live_reader.py
reporting/: graph_export.py  html_report.py  json_export.py  timeline_export.py
scripts/: backup_restore.py  competitive_eval.py  enable_live_telemetry.ps1  prepare_benchmark_inputs.py  production_readiness.py  release_gate.py  validate_engine.py
static/: dashboard.html
tests/: test_api.py  test_benign_regressions.py  test_bits_notify_smoke.py  test_case_metrics.py  test_cli_usability.py  test_display.py  test_html_report.py  test_live_mode.py  test_lolbin_sample_smoke.py  test_parser_parallel.py  test_performance.py  test_regressions.py  test_sigma_cli_e2e.py  test_sigma_support.py  test_tuning_bootstrap.py  test_webhooks.py
triage_engine/: adapters.py  auth_store.py  campaigns.py  case_utils.py  cli.py  confidence.py  db_migrate.py  display.py  export_sanitizer.py  id_utils.py  job_store.py  logging_config.py  playbooks.py  review_store.py  rule_metrics.py  (+10 more)
(+12 files in other folders)
